# WanderAI

./: .dockerignore  .env.example  .gitignore  .trained_model_3d.txt  DEPLOY_HF.md  Dockerfile  Dockerfile.hud  HANDOFF.md  MUJOCO_LOG.TXT  README.md  env.py  pyproject.toml  requirements.txt  serve.py  tasks.py
docs/: demo_speaker_notes.md  eval_report.md  hackathon-feasibility-winnability-report.md  rft_launch.md
docs/superpowers/plans/: 2026-06-20-scene-search-env.md
docs/superpowers/specs/: 2026-06-20-wanderai-scene-agnostic-search-design.md
examples/: gizmo_real_export.xml  gizmo_sample_room.xml
examples/red_wall_button/: _unisim_snapshot.json  red_wall_button.usda
rft_eval/: test_wander_rft.py
scripts/: await_v3.py  build_rft_dataset.py  demo_3d_trained.py  deploy_trained.py  grpo_preview.py  launch_rft.py  launch_rft_v4.sh  run_episode.py  watch_deploys.py  watch_v4.py  watch_v5.py
tests/: test_antim_import.py  test_distance_field.py  test_env_memory.py  test_env_textobs.py  test_environment.py  test_evaluate.py  test_geometry.py  test_hud_adapter.py  test_llm_policy.py  test_metrics.py  test_mujoco_renderer.py  test_observation.py  test_occupancy.py  test_perception.py  test_policies.py  test_renderer.py  test_rft.py  test_scene.py  test_scene_gen.py  test_tasks.py
ui/: index.html
wander-hud/: .dockerignore  .gitignore  Dockerfile.hud  MUJOCO_LOG.TXT  README.md  bridge_agent.py  env.py  eval_agents.py  eval_tasks.py  eval_tasks_3d.py  pyproject.toml  run_bridge.py  run_eval_suite.py  run_native.py  tasks.py
wander-hud/tests/: test_env.py
wander_lake/: scene_3d_train.xml  server.py  test_wander_rl.py  wander_adapter.py  wander_mcp.py
wanderai/: __init__.py  antim.py  antim_import.py  distance_field.py  environment.py  evaluate.py  geometry.py  hud_adapter.py  llm_policy.py  metrics.py  mujoco_renderer.py  observation.py  occupancy.py  perception.py  policies.py  renderer.py  rft.py  scene.py  scene_gen.py
