[project]
name = "wanderai"
version = "0.1.0"
description = "Scene-agnostic egocentric object-search RL environment"
requires-python = ">=3.10"
dependencies = ["numpy", "certifi"]

[project.optional-dependencies]
dev = ["pytest"]
rft = ["eval-protocol"]   # for launching the Fireworks RFT job (see docs/rft_launch.md)

[tool.setuptools.packages.find]
include = ["wanderai*"]

[tool.pytest.ini_options]
# wander-hud/ is a separate HUD package (runs in .venv-hud on py3.12); don't collect it here.
testpaths = ["tests"]
